--- a/index.html
+++ b/index.html
@@ -1,9 +1,115 @@
-<html>
-	<head>
-		<title>Hello Cloudflare!</title>
-	</head>
-	
-	<body>
-		<p>Workers Team #1</p>
-	</body>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>David Song</title>
+
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/portfolio.css">
+</head>
+
+<body>
+
+  <div class="container-fluid header">
+    <div class="row">
+      <div class="col-lg-6 col-sm-12 header-video d-none d-lg-block">
+        <video loop muted autoplay poster="">
+          <source src= "media/header1.webm" type="video/webm">
+          <source src="media/header1.mp4" type="video/mp4">
+        </video>
+      </div>
+      <div class="col-lg-6 col-sm-12 header-text">
+        <div class="wrapper">
+          <div class="header-title">
+            <img src="media/pro0.png" class="header-profile">
+            <h2>David Song</h2>
+            <p></p>
+          </div>
+          <div class="header-social">
+            <!-- <a class="link-a" href="https://instagram.com/david.t.song"><i class="fa fa-2x fa-fw fa-instagram"></i></a> -->
+            <!-- <a class="link-a" href="https://www.linkedin.com/in/david-song-431453a0/"><i class="fa fa-2x fa-fw fa-linkedin-square"></i></a> -->
+            <a class="link-a" href="http://www.github.com/davidtsong"><i class="fab fa-2x fa-fw fa-github"></i></a>
+            <a class="link-a" href="https://twitter.com/davidtsong"><i class="fab fa-2x fa-fw fa-twitter"></i></a>
+            <a class="link-a" href="https://open.spotify.com/user/davidtsong?si=F4vqdcQ9QWmfLwsVkMTIyA"><i class="fab fa-2x fa-fw fa-spotify"></i></a>
+            <a class="link-a" href="mailto:david@davidtsong.com"><i class="fa fa-2x fa-fw fa-envelope"></i></a>
+            <!-- <a class="link-a" href="tel:916-500-4892"><i class="fa fa-2x fa-fw fa-phone"></i></a> -->
+            <form class="signup-form" action="https://davidtsong.us17.list-manage.com/subscribe/post?u=b87d79ad92715e169aec72c62&amp;id=e1a17024dd" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+              <div class="form-group">
+                <input type="email" name="EMAIL" class="form-control" id="mce-EMAIL" aria-describedby="emailHelp" placeholder="Email">
+              </div>
+              <div class="form-group">
+                <input type="text" name="MMERGE1" class="form-control" id="mce-MMERGE1" aria-describedby="phoneHelp" placeholder="Phone Number">
+              </div>
+              <button type="submit" class="btn btn-info">Subscribe for Updates</button>
+            </form>
+            <iframe id="my_iframe" style="display:none;"></iframe>
+            <div id="mce-responses" class="clear">
+              <div class="response" id="mce-error-response" style="display:none"></div>
+              <div class="response" id="mce-success-response" style="display:none"></div>
+            </div>
+          </div>
+          <div class="header-signup">
+
+            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+            <div style="position: absolute; left: -5000px;" aria-hidden="true">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container-fluid portfolio">
+    <div class="row">
+      <div class="col-lg-4 ">
+        <div class="card">
+          <!-- <img class="card-img-top" src=".../100px180/" alt="Card image cap"> -->
+          <div class="card-body">
+            <h5 class="card-title">A Stanford Entrepreneur</h5>
+            <p class="card-text">A short video documentary on entrepreneurship at Stanford.</p>
+            <a href="https://vimeo.com/304984575" class="btn btn-info"><i class="fas fa-angle-double-right"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4">
+        <div class="card">
+          <!-- <img class="card-img-top" src=".../100px180/" alt="Card image cap"> -->
+          <div class="card-body">
+            <h5 class="card-title">LifeGlass</h5>
+            <p class="card-text"> a MacOS menubar app to track how much time you have left... </p>
+            <a href="lifeglass.html" class="btn btn-info"><i class="fas fa-angle-double-right"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4">
+        <div class="card">
+          <!-- <img class="card-img-top" src=".../100px180/" alt="Card image cap"> -->
+          <div class="card-body">
+            <h5 class="card-title">Marketwatch Trade P&L Python Bot</h5>
+            <p class="card-text">This program rips users trade history from markewatch.com and generates graphs of their perforamnce based on historical trading data.</p>
+            <a href="https://github.com/davidtsong/marketwatchdownloader" class="btn btn-info"><i class="fas fa-angle-double-right"></i></a>
+          </div>
+        </div>
+      </div>
+
+      <div class="w-100"></div>
+
+      <div class="col-lg-4">
+        <div class="card">
+          <!-- <img class="card-img-top" src=".../100px180/" alt="Card image cap"> -->
+          <div class="card-body">
+            <h5 class="card-title">Odd Even</h5>
+            <p class="card-text">A Dapp built on Nebulas to let users gamble on whether a randomly generated number is even or odd.</p>
+            <a href="oddeven.html" class="btn btn-info"><i class="fas fa-angle-double-right"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
+
 </html>
